# service-catalog-provisioned-product-updater

./: Makefile  README.md  buildspec.yml
apps/get_latest_version/: Makefile  package.sh  pyproject.toml
apps/get_latest_version/get_latest_version/: main.py
apps/update_product/: Makefile  package.sh  pylintrc  pyproject.toml
apps/update_product/update_product/: main.py
ci/: codepipeline.yml
scripts/: pipeline.sh
stacks/management-account/: service-catalog-provisioned-product-updater-list-accounts-role.yml
stacks/service-catalog-account/: step-function.yml
stacks/service-catalog-account/apps/: get-latest-version.yml  update-product.yml
stacks/service-catalog-account/apps/parameters/get-latest-version/: test.json
stacks/service-catalog-account/apps/parameters/update-product/: live.json
stacks/service-catalog-account/parameters/step-function/: live.json  test.json
