[tool.poetry]
name = "get-latest-version"
version = "0.1.0"
description = "gets the latest version of a specific service catalog product"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.63"
aws-lambda-powertools = "^2.35.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
